--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.2.0
   intl: ^0.20.2
   flutter_lorem: ^2.0.0
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
