--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   flutter_lorem: ^2.0.0
   supabase_flutter: ^2.5.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
